[package]
name = "lucinda"
version = "0.1.0"
description = "Sparse LU Decomposition (Gilbert-Peierls)"
edition = "2021"

[dependencies]
num-traits = "0.2"
num-complex = "0.4"

tabwriter = { version = "1.2", optional = true }
pretty_dtoa = { version = "0.3", optional = true }

[features]
debug = ["tabwriter", "pretty_dtoa"]
