[package]
name = "rlu"
version = "0.5.1"
description = "Sparse LU Decomposition (Gilbert-Peierls)"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rwl/rlu"

[dependencies]
num-traits = "0.2"
num-complex = "0.4"

tabwriter = { version = "1.2", optional = true }
pretty_dtoa = { version = "0.3", optional = true }

spsolve = { version = "0.1", optional = true }
amd = { version = "0.2", optional = true }
anyhow = { version = "1", optional = true }

[features]
debug = ["tabwriter", "pretty_dtoa"]
spsolve = ["dep:spsolve", "dep:amd", "dep:anyhow"]
default = ["spsolve"]
